claudecode-opus/force-app/main/default/objects/CSV_Import_Error__c/CSV_Import_Error__c.object-meta.xml
<CustomObject>
    <label>CSV Import Error</label>
    <nameField>
        <displayFormat>ERR-{0000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSV Import Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>