claudecode-opus/force-app/main/default/objects/CSV_Import_Error__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>