claudecode-opus/force-app/main/default/objects/CSV_Import_Error__c/fields/Row_Data__c.field-meta.xml
<CustomField>
    <fullName>Row_Data__c</fullName>
    <label>Row Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>