claudecode-opus/force-app/main/default/objects/CSV_Import_Error__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <label>Row Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>